--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "circularjs",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Traverse circular javascript object graphs, in a non-recursive way",
   "main": "index.js",
   "scripts": {
@@ -23,5 +23,8 @@
   },
   "dependencies": {
     "underscore": "~1.6.0"
+  },
+  "devDependencies": {
+    "chai": "~1.9.1"
   }
 }
